examples/test/testpolicy15200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15200
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key25: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value11
          key38: value34
          key20: value26
      podSelector:
        matchLabels:
          key39: value47
